[gd_scene load_steps=6 format=3 uid="uid://c4oos03fkn7al"]

[ext_resource type="Script" path="res://NPCs/Wacek.gd" id="1_a7lmf"]
[ext_resource type="Texture2D" uid="uid://7wshudj4nvpc" path="res://assets/characters/Wacek.png" id="2_7qtxw"]
[ext_resource type="PackedScene" uid="uid://dr4xh7g0ik0yx" path="res://dialogue/dialogue.tscn" id="2_gbdgh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3imcm"]
radius = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6awq7"]

[node name="Wacek" type="Area2D"]
script = ExtResource("1_a7lmf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_7qtxw")

[node name="chat_detection_area" type="Area2D" parent="."]

[node name="WacekDialogue" parent="chat_detection_area" instance=ExtResource("2_gbdgh")]
offset_left = -58.0
offset_top = -140.0
offset_right = -18.0
offset_bottom = -100.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_3imcm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_6awq7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="dialogue_finished" from="chat_detection_area/WacekDialogue" to="chat_detection_area/WacekDialogue" method="_on_dialogue_finished"]
